prevent black flicker in chrome

--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -62,6 +62,7 @@ body{
   width: 100%;
   height: 100%;
   position: relative;
+  -webkit-backface-visibility: hidden;
 }
 
 header{
@@ -385,6 +386,8 @@ input.error, textarea.error{
   border-radius: 10px;
   padding: 20px 0;
   position: relative;
+
+  -webkit-transform: translate3D(0, 0, 0);
 }
 
 #list-header{
@@ -620,6 +623,9 @@ input.error, textarea.error{
   cursor: pointer;
   @include border-radius(17px, 17px);
   @include prefixed("user-select", "none");
+
+  -webkit-transform: translate3D(0, 0, 0);
+
   >i{
     position: relative;
     color: white;
@@ -1751,6 +1757,7 @@ button.edit-form-save-item{
   }
   .speaker{
     padding: 10px 0 0 0;
+    -webkit-transform: translate3D(0, 0, 0);
     .icon-play-circle{
       font-size: 40px;
     }
